--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 # Minimal Jekyll config for academicpages (GiHoon Kim)
 
-# Basic Site Settings
 locale: "en-US"
 site_theme: "default"
 title: "GiHoon Kim"
@@ -8,13 +7,11 @@ title_separator: "-"
 name: "GiHoon Kim"
 description: "Ph.D. Student @ Seoul National University | Diffusion / Personalization / Multimodal"
 
-# GitHub Pages (user page)
+# GitHub Pages project site
 url: "https://rlgnswk.github.io"
 baseurl: "/gihoonkim"
 repository: "rlgnswk/gihoonkim"
 
-
-# Author (sidebar)
 author:
   name: "GiHoon Kim"
   avatar: "/images/profile.jpg"
@@ -24,19 +21,35 @@ author:
   email: "gihoon.kim@snu.ac.kr"
   googlescholar: "https://scholar.google.com/citations?user=Gbljjm0AAAAJ"
   github: "rlgnswk"
-  linkedin: "gihoon-kim-phdstudent"  # (safer than full URL)
+  linkedin: "gihoon-kim-phdstudent"
 
-# Disable extras
 breadcrumbs: false
-future: false
+future: true
 read_more: "disabled"
 
-# Keep only what you need to render pages and attach files
 include:
   - _pages
   - files
 
-# Plugins (keep GitHub Pages compatible set)
+collections:
+  publications:
+    output: true
+    permalink: /publication/:path/
+
+defaults:
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+  - scope:
+      path: ""
+      type: publications
+    values:
+      layout: single
+      author_profile: true
+
 plugins:
   - jekyll-feed
   - jekyll-gist
