--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ repository: "rlgnswk/gihoonkim"
 author:
   name: "GiHoon Kim"
   author:
-    avatar: "profile.jpg"
+    avatar: "/images/profile.jpg"
   bio: "Ph.D. student working on personalized diffusion (distribution drift, identity consistency, semantic anchoring) and multimodal generative modeling (text-to-image, video generation)."
   location: "Seoul, Republic of Korea"
   employer: "Seoul National University"
