--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ repository: "rlgnswk/gihoonkim"
 # IMPORTANT: Fix author fields for author_profile.html
 author:
   name: "GiHoon Kim"
-  avatar: "profile.jpg"  # will resolve to <baseurl>/images/profile.jpg
-  bio: "Ph.D. student working on personalized diffusion (distribution drift, identity consistency, semantic anchoring) and multimodal generative modeling (text-to-image, video generation)."
+  avatar: "profile.jpg"
+  bio: "Ph.D. student in diffusion & multimodal generation."
   location: "Seoul, Republic of Korea"
   employer: "Seoul National University"
   email: "gihoon.kim@snu.ac.kr"
